# dcdir

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: mkdocs.yml  python-package.yml
docs/: advanced.md  api.md  basic.md  index.md  usage.md
docs/examples/101/: notebook.md
docs/examples/jules/: notebook.md  requirements.txt
src/dcdir/: __init__.py  dcdir.py
src/dirconf/: __init__.py  dirconf.py  handler.py  missing.py  node.py
src/metaconf/: __init__.py  config.py  filter.py  handler.py  missing.py  node.py  utils.py
tests/: directory_config.json  spec.json  test_config.py  test_dcdir.py  test_dirconf.py  test_dynamic_construction.py
