[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dirconf"
version = "0.1.0"
authors = [
    {name = "Joe Marsh Rossney", email = "17361029+jmarshrossney@users.noreply.github.com"}
]
description = "Simple directory configuration using Python dataclasses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff]
exclude = [
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py313"
