[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "metaconf"
version = "0.2.0"
authors = [
    {name = "Joe Marsh Rossney", email = "17361029+jmarshrossney@users.noreply.github.com"}
]
description = "Simple meta-configuration of configuration files using Python dataclasses."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "markdown-exec[ansi]>=1.11.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.ruff]
exclude = [
    "tests",
    ".venv",
]
line-length = 88
indent-width = 4
target-version = "py313"
